# BioMedAgent-Langchain

./: .env  .gitignore  README.md  agent.py  agent_graph.py  config.py  demo.py  pyproject.toml
data/: TCGA_LIHC_survival.txt  demo.vcf  plot.tsv
memory/: memory_retriever.py
scripts/: component.py  prompt.py
task/2026-6/24/113bce35-c123-4678-97c5-8a9030f8532b/: group1.tsv
task/2026-6/24/8a0d3dba-dd6c-4702-8ccd-b755c03a9dc4/: heart_disease.csv
task/2026-6/24/d9e12a72-1ae8-45ef-a15e-bf4fca448f15/: data1.tsv
tool/doc/: cel2matrix  survival_curve  t_test
