[project]
name = "bioagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcembedding>=0.1.3",
    "colorama>=0.4.6",
    "datasets>=5.0.0",
    "huggingface-hub>=1.5.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.4",
    "langchain-redis>=0.2.5",
    "langgraph>=1.2.6",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "socksio>=1.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
